# rust-http

./: README.md
http/src/: httpresponse.rs
httpserver/: Cargo.toml
httpserver/src/: handler.rs  router.rs
manually_crafted_http/http/src/: httprequest.rs  httpresponse.rs
manually_crafted_http/httpserver/public/: 404.html  index.html
manually_crafted_http/httpserver/src/: handler.rs  main.rs  server.rs
my-actix/: Cargo.toml
my-actix/src/: handlers.rs  models.rs  router.rs  state.rs
tcpclient/src/: main.rs
tcpserver/src/: main.rs
